<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Clock</string>
	<string name="hello_world">Hello world!</string>
	<string name="action_settings">Settings</string>
	<string name="addalarm">AddAlarm</string>
	<string name="add_alarm">add_Alarm</string>
	<string name="play_sound">Play_Sound</string>
	<string name="start">Start</string>
	<string name="reset">Reset</string>
	<string name="pause">Pause</string>
	<string name="resume">Resume</string>
	<string name="lap">Lap</string>
</resources>