<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="com.example.clock.MainActivity" >
	<TabHost
		android:id="@android:id/tabhost"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true" >
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical" >
			<TabWidget
				android:id="@android:id/tabs"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" >
			</TabWidget>
			<FrameLayout
				android:id="@android:id/tabcontent"
				android:layout_width="match_parent"
				android:layout_height="match_parent" >
				<com.example.clock.TimeView
					android:id="@+id/tabTime"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:orientation="vertical" >
					<TextView
						android:id="@+id/tvTime"
						android:layout_width="fill_parent"
						android:layout_height="fill_parent"
						android:gravity="center"
						android:textAppearance="?android:attr/textAppearanceLarge" />
				</com.example.clock.TimeView>
				<com.example.clock.AlarmView
					android:id="@+id/tabAlarm"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:orientation="vertical" >
					<ListView
						android:id="@+id/lvAlarmList"
						android:layout_width="fill_parent"
						android:layout_height="0dp" >
					</ListView>
					<Button
						android:id="@+id/btnAddAlarm"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:text="@string/add_alarm" />
				</com.example.clock.AlarmView>
				<com.example.clock.TimerView
					android:id="@+id/tabTimer"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:orientation="vertical" >
					<LinearLayout
						android:layout_width="fill_parent"
						android:layout_height="0dp"
						android:layout_weight="1"
						android:orientation="horizontal" >
						<EditText
							android:id="@+id/etHours"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:inputType="number"
							android:singleLine="true"
							android:textAppearance="?android:attr/textAppearanceLarge" />
						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text=":"
							android:textAppearance="?android:attr/textAppearanceLarge" />
						<EditText
							android:id="@+id/etMinutes"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:inputType="number"
							android:singleLine="true"
							android:textAppearance="?android:attr/textAppearanceLarge" />
						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text=":"
							android:textAppearance="?android:attr/textAppearanceLarge" />
						<EditText
							android:id="@+id/etSeconds"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:inputType="number"
							android:singleLine="true"
							android:textAppearance="?android:attr/textAppearanceLarge" />
					</LinearLayout>
					<LinearLayout
						android:id="@+id/btnGroup"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal" >
						<Button
							android:id="@+id/btnStart"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:text="@string/start" />
						<Button
							android:id="@+id/btnReset"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:text="@string/reset" />
						<Button
							android:id="@+id/btnPause"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:text="@string/pause" />
						<Button
							android:id="@+id/btnResume"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:text="@string/resume" />
					</LinearLayout>
				</com.example.clock.TimerView>
				<com.example.clock.StopWatchView
					android:id="@+id/tabStopWatch"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:orientation="vertical" >
					<LinearLayout
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal" >
						<TextView
							android:id="@+id/timeHour"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:textAppearance="?android:attr/textAppearanceLarge" />
						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text=":"
							android:textAppearance="?android:attr/textAppearanceLarge" />
						<TextView
							android:id="@+id/timeMin"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:textAppearance="?android:attr/textAppearanceLarge" />
						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text=":"
							android:textAppearance="?android:attr/textAppearanceLarge" />
						<TextView
							android:id="@+id/timeSec"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:textAppearance="?android:attr/textAppearanceLarge" />
						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="."
							android:textAppearance="?android:attr/textAppearanceLarge" />
						<TextView
							android:id="@+id/timeMSec"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:textAppearance="?android:attr/textAppearanceLarge" />
					</LinearLayout>
					<ListView
						android:id="@+id/lvWatchTimeList"
						android:layout_width="fill_parent"
						android:layout_height="0dp"
						android:layout_weight="1" >
					</ListView>
					<LinearLayout
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal" >
						<Button
							android:id="@+id/btnSWStart"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:text="@string/start" />
						<Button
							android:id="@+id/btnSWPause"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:text="@string/pause" />
						<Button
							android:id="@+id/btnSWResume"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:text="@string/resume" />
						<Button
							android:id="@+id/btnSWLap"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:text="@string/lap" />
						<Button
							android:id="@+id/btnSWReset"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:text="@string/reset" />
					</LinearLayout>
				</com.example.clock.StopWatchView>
			</FrameLayout>
		</LinearLayout>
	</TabHost>
</RelativeLayout>